# robin-scraping-api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/robin_scraping_api/: README.md  __init__.py  cli.py  config.py  encrypt_profiles.py  logging_config.py  main.py  schemas.py  settings.py
src/robin_scraping_api/routers/: fetch.py
src/robin_scraping_api/services/: fetch.py
src/robin_scraping_api/templates/: base.html  fetch.html  profiles.html
