[project]
name = "robin-scraping-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "kraigochieng", email = "kraigochieng@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cryptography>=46.0.7",
    "fastapi[standard]>=0.136.0",
    "markdownify>=1.2.2",
    "pydantic>=2.13.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "scrapling[fetchers]>=0.4.6",
    "typer>=0.24.1",
]

[project.scripts]
robin-scraping-api = "robin_scraping_api:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
